<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="horizontal"
    tools:ignore="ExtraText">-->

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:text="@string/calculator"
        android:textSize="@dimen/button_text"
        android:gravity="center"
        tools:ignore="SpUsage"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:background="@drawable/hand"
        tools:ignore="ContentDescription" />


    <Button
        android:id="@+id/button_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:text="@string/del"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/text_input"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_gravity="fill"
        android:layout_columnSpan="3"
        android:layout_column="0"
        android:text="@string/input"
        android:textSize="24dp"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor,SpUsage" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/one"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_mulriply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="3"
        android:text="@string/mulriply"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/four"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="3"
        android:text="@string/minus"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/seven"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="3"
        android:text="@string/plus"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>


    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:text="@string/zero"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>


    <Button
        android:id="@+id/button_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="2"
        android:text="@string/dot"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>

    <Button
        android:id="@+id/button_equally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="3"
        android:text="@string/equally"
        android:textSize="@dimen/button_text"
        tools:ignore="SpUsage"/>








</GridLayout>

